; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_png.c_CloseBufferedFile.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderercommon/extr_tr_image_png.c_CloseBufferedFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.BufferedFile*)*, i32 (i64)* }
%struct.BufferedFile = type { i64 }

@ri = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.BufferedFile*)* @CloseBufferedFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CloseBufferedFile(%struct.BufferedFile* %0) #0 {
  %2 = alloca %struct.BufferedFile*, align 8
  store %struct.BufferedFile* %0, %struct.BufferedFile** %2, align 8
  %3 = load %struct.BufferedFile*, %struct.BufferedFile** %2, align 8
  %4 = icmp ne %struct.BufferedFile* %3, null
  br i1 %4, label %5, label %20

5:                                                ; preds = %1
  %6 = load %struct.BufferedFile*, %struct.BufferedFile** %2, align 8
  %7 = getelementptr inbounds %struct.BufferedFile, %struct.BufferedFile* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %5
  %11 = load i32 (i64)*, i32 (i64)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 1), align 8
  %12 = load %struct.BufferedFile*, %struct.BufferedFile** %2, align 8
  %13 = getelementptr inbounds %struct.BufferedFile, %struct.BufferedFile* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 %11(i64 %14)
  br label %16

16:                                               ; preds = %10, %5
  %17 = load i32 (%struct.BufferedFile*)*, i32 (%struct.BufferedFile*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ri, i32 0, i32 0), align 8
  %18 = load %struct.BufferedFile*, %struct.BufferedFile** %2, align 8
  %19 = call i32 %17(%struct.BufferedFile* %18)
  br label %20

20:                                               ; preds = %16, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
